--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,19 @@
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
 
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.datasource.url=jdbc:mysql://localhost:3306/reddit
+#spring.datasource.username=root
+#spring.datasource.password=mysql
+#spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.initialization-mode=always
+#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+
+
+#spring.datasource.url=jdbc:mysql://${RDS_HOSTNAME:localhost}:${RDS_PORT:3306}/${RDS_DB_NAME:todos}
+#spring.datasource.username=${RDS_USERNAME:todos-user}
+#spring.datasource.password=${RDS_PASSWORD:dummytodos}
+#spring.datasource.url=jdbc:mysql://localhost:3306/todos
+#spring.datasource.username=todos-user
+#spring.datasource.password=dummytodos
