--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,14 @@
+logging.level.org.springframework.web=INFO
+
+spring.security.user.name=himanshu
+spring.security.user.password=gawari
+
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
-spring.h2.console.settings.web-allow-others=true
+#spring.h2.console.settings.web-allow-others=true
 
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# Schema nam is reddit
 #spring.datasource.url=jdbc:mysql://localhost:3306/reddit
 #spring.datasource.username=root
 #spring.datasource.password=mysql
