--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.security.user.password=gawari
 
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
+spring.datasource.url = jdbc:h2:mem:testdb
 #spring.h2.console.settings.web-allow-others=true
 
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
