--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,6 +8,14 @@ spring.h2.console.enabled=true
 spring.datasource.url = jdbc:h2:mem:testdb
 #spring.h2.console.settings.web-allow-others=true
 
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=himanshu.email.helper@gmail.com
+spring.mail.password=email.helper
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.starttls.required=true
+
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Schema nam is reddit
 #spring.datasource.url=jdbc:mysql://localhost:3306/reddit
