added mailtrap configurations

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,14 +8,25 @@ spring.h2.console.enabled=true
 spring.datasource.url = jdbc:h2:mem:testdb
 #spring.h2.console.settings.web-allow-others=true
 
-spring.mail.host=smtp.gmail.com
-spring.mail.port=587
-spring.mail.username=himanshu.email.helper@gmail.com
-spring.mail.password=email.helper
+spring.mail.host=smtp.mailtrap.io
+spring.mail.port=2525
+spring.mail.username=d6645cb90e75ee
+spring.mail.password=5d3415dc65dc65
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.starttls.required=true
+
+#spring.mail.host=smtp.gmail.com
+#spring.mail.port=587
+#spring.mail.username=himanshu.email.helper@gmail.com
+#spring.mail.password=email.helper
+#spring.mail.protocol=smtp
+#spring.mail.properties.mail.smtp.auth=true
+#spring.mail.properties.mail.smtp.starttls.enable=true
+#spring.mail.properties.mail.smtp.starttls.required=true
+#spring.mail.properties.mail.smtp.startssl.enable=true
+#spring.mail.properties.mail.smtp.startssl.required=true
 
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # Schema nam is reddit
