--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,8 +4,9 @@ spring.security.user.name=himanshu
 spring.security.user.password=gawari
 
 spring.jpa.show-sql=true
-spring.h2.console.enabled=true
-spring.datasource.url = jdbc:h2:mem:testdb
+
+#spring.h2.console.enabled=true
+#spring.datasource.url = jdbc:h2:mem:testdb
 #spring.h2.console.settings.web-allow-others=true
 
 spring.mail.host=smtp.mailtrap.io
@@ -28,14 +29,14 @@ spring.mail.properties.mail.smtp.starttls.required=true
 #spring.mail.properties.mail.smtp.startssl.enable=true
 #spring.mail.properties.mail.smtp.startssl.required=true
 
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-# Schema nam is reddit
-#spring.datasource.url=jdbc:mysql://localhost:3306/reddit
-#spring.datasource.username=root
-#spring.datasource.password=mysql
-#spring.jpa.hibernate.ddl-auto=update
-#spring.datasource.initialization-mode=always
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
+# Schema name is reddit
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/reddit
+spring.datasource.username=root
+spring.datasource.password=mysql
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.initialization-mode=always
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL57Dialect
 
 
 #spring.datasource.url=jdbc:mysql://${RDS_HOSTNAME:localhost}:${RDS_PORT:3306}/${RDS_DB_NAME:todos}
