--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 
 	<properties>
 		<java.version>11</java.version>
+		<m2e.apt.activation>jdt_apt</m2e.apt.activation>
 		<org.mapstruct.version>1.3.1.Final</org.mapstruct.version>
 	</properties>
 
@@ -144,11 +145,12 @@
 						<path>
 							<groupId>org.mapstruct</groupId>
 							<artifactId>mapstruct-processor</artifactId>
-							<!-- <version>${org.mapstruct.version}</version> -->
+							<version>${org.mapstruct.version}</version>
 						</path>
 						<path>
 							<groupId>org.projectlombok</groupId>
 							<artifactId>lombok</artifactId>
+							<version>1.18.12</version>
 						</path>
 						<!-- other annotation processors -->
 					</annotationProcessorPaths>
