--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,8 +20,8 @@ spring.mail.properties.mail.smtp.starttls.required=true
 
 #spring.mail.host=smtp.gmail.com
 #spring.mail.port=587
-#spring.mail.username=himanshu.email.helper@gmail.com
-#spring.mail.password=email.helper
+#spring.mail.username=
+#spring.mail.password=
 #spring.mail.protocol=smtp
 #spring.mail.properties.mail.smtp.auth=true
 #spring.mail.properties.mail.smtp.starttls.enable=true
