--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,6 +3,8 @@ logging.level.org.springframework.web=INFO
 spring.security.user.name=himanshu
 spring.security.user.password=gawari
 
+jwt.expiration.time=900000
+
 spring.jpa.show-sql=true
 
 #spring.h2.console.enabled=true
