--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.security.user.name=himanshu
 spring.security.user.password=gawari
 
 jwt.expiration.time=900000
+#jwt.expiration.time=9000
 
 spring.jpa.show-sql=true
 
