--- a/pom.xml
+++ b/pom.xml
@@ -124,6 +124,17 @@
 			<!-- <version>${kotlin.version}</version> -->
 			<scope>test</scope>
 		</dependency>
+		<!-- Spring Fox Dependencies -->
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.9.2</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.9.2</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
@@ -197,15 +208,8 @@
 						<!-- other annotation processors -->
 					</annotationProcessorPaths>
 				</configuration>
-				<!-- <executions>
-					<execution>
-						<id>java-compile</id>
-						<phase>compile</phase>
-						<goals>
-							<goal>compile</goal>
-						</goals>
-					</execution>
-				</executions> -->
+				<!-- <executions> <execution> <id>java-compile</id> <phase>compile</phase> 
+					<goals> <goal>compile</goal> </goals> </execution> </executions> -->
 			</plugin>
 
 		</plugins>
