--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,8 @@
 	<parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
-		<version>2.3.0.RELEASE</version>
+		<!-- <version>2.3.0.RELEASE</version> -->
+		<version>2.1.8.RELEASE</version>
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>in.himanshu-gawari</groupId>
@@ -50,12 +51,12 @@
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<!-- spring-data-rest-hal-browser deprecated using instead spring-data-rest-hal-explorer -->
-		<!-- <dependency> <groupId>org.springframework.data</groupId> <artifactId>spring-data-rest-hal-browser</artifactId> 
-			</dependency> -->
 		<dependency>
 			<groupId>org.springframework.data</groupId>
-			<artifactId>spring-data-rest-hal-explorer</artifactId>
+			<artifactId>spring-data-rest-hal-browser</artifactId>
 		</dependency>
+		<!-- <dependency> <groupId>org.springframework.data</groupId> <artifactId>spring-data-rest-hal-explorer</artifactId> 
+			</dependency> -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-devtools</artifactId>
@@ -118,12 +119,12 @@
 			<artifactId>kotlin-stdlib</artifactId>
 			<!-- <version>${kotlin.version}</version> -->
 		</dependency>
-		<dependency>
+		<!-- <dependency>
 			<groupId>org.jetbrains.kotlin</groupId>
 			<artifactId>kotlin-test-junit</artifactId>
-			<!-- <version>${kotlin.version}</version> -->
+			<version>${kotlin.version}</version>
 			<scope>test</scope>
-		</dependency>
+		</dependency> -->
 		<!-- Spring Fox Dependencies -->
 		<dependency>
 			<groupId>io.springfox</groupId>
@@ -135,6 +136,9 @@
 			<artifactId>springfox-swagger-ui</artifactId>
 			<version>2.9.2</version>
 		</dependency>
+		<!-- added for bug in springfox swagger -->
+		<!-- <dependency> <groupId>org.springframework.plugin</groupId> <artifactId>spring-plugin-core</artifactId> 
+			<version>1.2.0.RELEASE</version> </dependency> -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-tomcat</artifactId>
