--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 logging.level.org.springframework.web=INFO
 
-spring.security.user.name=himanshu
-spring.security.user.password=gawari
+# adde default username and password for spring security
+spring.security.user.name=
+spring.security.user.password=
 
 jwt.expiration.time=900000
 #jwt.expiration.time=9000
@@ -14,8 +15,9 @@ spring.jpa.show-sql=true
 
 spring.mail.host=smtp.mailtrap.io
 spring.mail.port=2525
-spring.mail.username=d6645cb90e75ee
-spring.mail.password=5d3415dc65dc65
+# add username and password
+spring.mail.username=
+spring.mail.password=
 spring.mail.protocol=smtp
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
@@ -34,6 +36,7 @@ spring.mail.properties.mail.smtp.starttls.required=true
 
 # Schema name is reddit
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+# put schema name in your system and below same e.g is reddit
 spring.datasource.url=jdbc:mysql://localhost:3306/reddit
 spring.datasource.username=root
 spring.datasource.password=mysql
