--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,6 @@ spring.security.user.name=
 spring.security.user.password=
 
 jwt.expiration.time=900000
-#jwt.expiration.time=9000
 
 spring.jpa.show-sql=true
 
@@ -13,6 +12,7 @@ spring.jpa.show-sql=true
 #spring.datasource.url = jdbc:h2:mem:testdb
 #spring.h2.console.settings.web-allow-others=true
 
+#can use mailtrap.io for mail
 spring.mail.host=smtp.mailtrap.io
 spring.mail.port=2525
 # add username and password
