--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,7 @@
 logging.level.org.springframework.web=INFO
 
+#logging.level.org.springframework.web=INFO
+
 #added default username and password for spring security
 spring.security.user.name=
 spring.security.user.password=
